--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,5 @@ cython_debug/
 
 Plots/
 reconstruction_output/
-reconstruction_outputs/
 tests/elective_artificial_intelligence_1.code-workspace
-data/
+data
