--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 imageio==2.28.1
 matplotlib==3.7.1
 numpy==1.24.3
-open3d==0.13.0
+open3d>=0.13.0
 pycolmap==0.4.0
-pyviz3d==0.2.32
-torch==1.8.0+cu111
+pyviz3d>=0.2.32
+torch>=1.10.2
 tqdm==4.65.0
 transformers==4.29.1
